# ALPR_GTAV

./: .flake8  .gitignore  GTA_V_ALPR_Project_Plan.md  README.md  pyproject.toml  requirements.txt  shrimp-rules.md
.github/: copilot-instructions.md
.streamlit/: config.toml
configs/: label_studio_config.xml  pipeline_config.yaml
configs/examples/: balanced.yaml  high_accuracy.yaml  high_performance.yaml
docs/: Milestone_Report.md  annotation_guide.md  api_reference.md  configuration_guide.md  data_collection_strategy.md  detection_comparison_report.md  developer_guide.md  final_report.md  frame_sampling_guide.md  full_pipeline_evaluation_report.md  label_studio_setup.md  ocr_baseline_evaluation_report.md  ocr_confusion_correction.md  project_structure.md  troubleshooting.md  user_guide.md
docs/dev/: annotation_guide.md  data_collection_strategy.md  label_studio_setup.md  ocr_baseline_evaluation_report.md
docs/report/: Milestone_Report.md  final_report.md  presentation.md
gui/: app.py  config.py
scripts/: README.md  README_process_video.md  batch_process_footage.py  build_desktop_app.bat  check_dataset_quality.py  clean_test_images.py  convert_labelstudio_to_yolo.py  data_capture_guide.md  data_collection_guide.md  debug_multi_detection.py  demo_ocr_correction.py  detect_image.py  detect_video.py  evaluate_detection.py  extract_frames.py  generate_evaluation_report.py  generate_metadata.py  process_video.py  start_annotation.py  test_ocr_correction.py  verify_gpu.py  visualize_detection_results.py
src/: __init__.py
tests/: __init__.py
(+100 files in other folders)
